build_out.txt

> shop@0.0.0 build
> vite build

[36mvite v8.0.3 [32mbuilding client environment for production...[36m[39m
[2Ktransforming...✓ 1758 modules transformed.
[31m✗[39m Build failed in 317ms
[31merror during build:
[31mBuild failed with 1 error:

[plugin vite:css-post]
SyntaxError: [lightningcss minify] Unknown at rule: @keyframes
877 |  }
878 |  
879 |  @keyframes slideDown {
    |                      ^
880 |    from { opacity: 0; transform: translateY(-10px); }
881 |    to { opacity: 1; transform: translateY(0); }
    at Module.<anonymous> (C:\Users\shiva\OneDrive\Desktop\shop\shop\node_modules\lightningcss\node\index.js:56:14)
    at minifyCSS (file:///C:/Users/shiva/OneDrive/Desktop/shop/shop/node_modules/vite/dist/node/chunks/node.js:21202:59)
    at async finalizeCss (file:///C:/Users/shiva/OneDrive/Desktop/shop/shop/node_modules/vite/dist/node/chunks/node.js:21048:36)
    at async Promise.all (index 1)
    at async Object.run (file:///C:/Users/shiva/OneDrive/Desktop/shop/shop/node_modules/vite/dist/node/chunks/node.js:2436:22)
    at async PluginContextImpl.renderChunk (file:///C:/Users/shiva/OneDrive/Desktop/shop/shop/node_modules/vite/dist/node/chunks/node.js:20587:19)
    at async plugin (file:///C:/Users/shiva/OneDrive/Desktop/shop/shop/node_modules/rolldown/dist/shared/bindingify-input-options-e7ze4hPR.mjs:1234:16)
    at async plugin.<computed> (file:///C:/Users/shiva/OneDrive/Desktop/shop/shop/node_modules/rolldown/dist/shared/bindingify-input-options-e7ze4hPR.mjs:1593:12)[31m
    at aggregateBindingErrorsIntoJsError (file:///C:/Users/shiva/OneDrive/Desktop/shop/shop/node_modules/rolldown/dist/shared/error-BLhcSyeg.mjs:48:18)
    at unwrapBindingResult (file:///C:/Users/shiva/OneDrive/Desktop/shop/shop/node_modules/rolldown/dist/shared/error-BLhcSyeg.mjs:18:128)
    at #build (file:///C:/Users/shiva/OneDrive/Desktop/shop/shop/node_modules/rolldown/dist/shared/rolldown-build-CPrIX9V6.mjs:3313:34)
    at async buildEnvironment (file:///C:/Users/shiva/OneDrive/Desktop/shop/shop/node_modules/vite/dist/node/chunks/node.js:32849:64)
    at async Object.build (file:///C:/Users/shiva/OneDrive/Desktop/shop/shop/node_modules/vite/dist/node/chunks/node.js:33271:19)
    at async Object.buildApp (file:///C:/Users/shiva/OneDrive/Desktop/shop/shop/node_modules/vite/dist/node/chunks/node.js:33268:153)
    at async CAC.<anonymous> (file:///C:/Users/shiva/OneDrive/Desktop/shop/shop/node_modules/vite/dist/node/cli.js:778:3) {
  errors: [Getter/Setter]
}[39m
